# MPNNOp

./: CMakeLists.txt  README.md  build.sh  mpnn.h
cam_tf/: sample.cu
core/: tensor.h
core/include/: half.h  tensor.h
core/src/: baseop.cpp  half.cpp  tensor.cpp
cuda/: cuda_gemm.cu  cuda_reduce.cu  cudnn_gemm.c  cudnn_reduce.c
kernels/: CMakeLists.txt
kernels/include/core/: baseop.h  core.h  half.h  tensor.h
kernels/include/operator/: operator.h
kernels/src/core/: baseop.cpp  half.cpp  tensor.cpp
test/: kernels.h
test/dtype_half_test/: CMakeLists.txt  half_test.cpp
tools/: .clang-format  style_format.sh
